--- a/style.css
+++ b/style.css
@@ -713,7 +713,10 @@ font-size:1em;
     border: 2px solid red; */
     padding-bottom: 7%;
 }
-
+  .parah1{
+    margin-right: 32em;
+}
+        
 .ibackcat{
     margin-top: 0;
 
