--- a/style.css
+++ b/style.css
@@ -709,14 +709,18 @@ font-size:1em;
 
     @media only screen and (max-width: 600px){
 .container1{
-    /* height: 40%;
-    border: 2px solid red; */
-    padding-bottom: 7%;
+     /* height: 40%; */
+    /* border: 2px solid red;  */
+    padding-bottom: 8%;
+
+
 }
-  .parah1{
+
+
+.parah1{
     margin-right: 32em;
 }
-        
+
 .ibackcat{
     margin-top: 0;
 
@@ -732,17 +736,25 @@ font-size:1em;
             font-size: large;
         }
         .emailbtn{
-        margin-top: 10%;
-            font-size: 5px;
+        position: absolute;
+        top: 15%;
+        left: 2%;
+            font-size: 9px;
+            height: fit-content;
+
+            display: flex;
+            justify-content: center;
             /* width: 50px; */
         }
         .emailbtn:hover{
             transform:none;
         }
     .number{
-        font-size: 5px;
-        margin-top: 2%;
-        /* width: 12%; */
+        top: 15%;
+        left: 19%;
+            font-size: 8px;
+        width: 15%;
+        
         /* display: none; */
     }
     .number:hover{
