--- a/style.css
+++ b/style.css
@@ -752,7 +752,7 @@ font-size:1em;
     .number{
         margin-left: 4px;
         top: 15%;
-        left: 30%;
+         right: 50%;
             font-size: 8px;
         width: 120px;
         
