--- a/style.css
+++ b/style.css
@@ -490,6 +490,7 @@ height: 100%;
   border: 1px solid #4d444d;
   overflow: hidden;
   position: absolute;
+  
 }
 
 .content-carrousel figure:nth-child(1) {
@@ -531,6 +532,7 @@ height: 100%;
   transition: all 300ms;
   width: 100%;
   height: 100%;
+ 
 }
 
 .content-carrousel img:hover {
@@ -717,9 +719,9 @@ font-size:1em;
 }
 
 
- .parah1{
-    width: min-content;
-} 
+/* .parah1{
+    margin-right: 40em;
+} */
 
 .ibackcat{
     margin-top: 0;
@@ -840,7 +842,7 @@ background-attachment:scroll ;
 /* margin: 0 15px; */
 height: 100%;
  width: 100%;
-    overflow:hidden;
+ overflow: hidden;
     
 }
 
@@ -877,6 +879,19 @@ margin-bottom: 30%;
 .carousel-indicators{
     display: none;
 }
+
+.parah1{
+
+    /* width: 0%; */
+    margin-right: 80em;
+}
+
+.addition {
+    
+    margin-left: 35%;
+    margin-top: 5%;
+    margin-right: 35%;
+  }
 
 
 
